--- a/web/src/App/App.scss
+++ b/web/src/App/App.scss
@@ -8,6 +8,9 @@
   flex-direction: column;
   padding-left: 17rem;
 
+  user-select: none !important;
+  cursor: default !important;
+
   header {
     padding: 1rem;
     width: 100%;
@@ -36,7 +39,7 @@
   }
 
   #sidebar {
-    position: absolute;
+    position: fixed;
     left: 0;
     min-height: 100vh;
     width: 17rem;
@@ -94,6 +97,6 @@
 
   #container {
     margin-top: 1rem;
-    padding: 0rem 1.5rem;
+    padding: 0rem 1.5rem 2rem;
   }
 }
