--- a/web/src/App/App.scss
+++ b/web/src/App/App.scss
@@ -54,7 +54,7 @@
       height: 4rem;
       display: flex;
       align-items: center;
-      padding-left: 1.25rem;
+      padding-left: 0.75rem;
 
       background-color: red;
       background-image: linear-gradient(45deg, #5A479A, #49DCB1);
@@ -71,9 +71,9 @@
     #links {
       .link-option {
         display: flex;
-        padding: 1rem 1.5rem;
+        padding: 1rem;
         align-items: center;
-        font-size: 1.125rem;
+        font-size: 1rem;
         font-weight: 500;
         color: #636e72;
 
