--- a/web/src/components/ProductDetails/ProductDetails.scss
+++ b/web/src/components/ProductDetails/ProductDetails.scss
@@ -1,36 +1,9 @@
 .product-container {
-  padding: 1rem 2rem 2rem;
+  padding: 1rem 1rem 2rem;
   margin-top: 0.5rem;
 
   display: flex;
   flex-direction: column;
-
-  .box {
-    position: relative;
-    background-color: #FFFFFF;
-    border-radius: 1rem;
-    box-shadow: 0px 2px 7px #8963ba33;
-    padding: 2.5rem 2rem 2rem;
-
-    height: fit-content;
-
-    &:not(:first-child) {
-      margin-top: 3rem;
-    }
-
-    .box-title {
-      position: absolute;
-      top: -1rem;
-      left: -1.5rem;
-      color: #333333;
-      font-size: 1.5rem;
-      font-weight: 600;
-      background-color: #FFFFFF;
-      padding: 0rem 1rem;
-      border-radius: 1rem;
-      box-shadow: 0px 1px 4px #8963ba33;
-    }
-  }
 
   .info {
     display: flex;
@@ -51,10 +24,20 @@
     }
   
     .name {
-      color: #5A479A;
       font-size: 2rem;
       line-height: 1.75rem;
       font-weight: 600;
+
+      background-color: red;
+      background-image: linear-gradient(45deg, #5A479A, #49DCB1);
+      
+      background-size: 100%;
+      background-repeat: repeat;
+
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent; 
+      -moz-background-clip: text;
+      -moz-text-fill-color: transparent;
     }
   
     img {
