--- a/web/src/components/ProductDetails/ProductDetails.scss
+++ b/web/src/components/ProductDetails/ProductDetails.scss
@@ -29,8 +29,9 @@
   
     .name {
       font-size: 2rem;
-      line-height: 1.75rem;
+      line-height: 2.25rem;
       font-weight: 600;
+      margin-top: 0.25rem;
 
       background-color: red;
       background-image: linear-gradient(45deg, #5A479A, #49DCB1);
